# golden

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml
data/: 002714.SZ.csv  AAPL.csv  SPY.csv  SPY_test.csv  TLT.csv
src/: cli.rs  color.rs  err.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/broker/: mod.rs
src/broker/alpaca/: alpaca.rs  mod.rs
src/broker/backtest/: backtest.rs
src/broker/ibkr/: ibapi.rs  mod.rs  trade.rs
src/cmds/: backtest.rs  csv.rs  data.rs  live.rs  mod.rs  paper.rs
src/csv/: csv.rs
src/feeds/: mod.rs
src/feeds/csv/: csv.rs  download.rs  fetch.rs  mod.rs
src/green/: green.rs  mod.rs  strategy.rs
src/green/broker/: backtest.rs  live.rs  mod.rs  paper.rs
src/green/broker/alpaca/: alpaca.rs
src/green/broker/ibkr/: backtest.rs
src/green/feeds/: yahoo.rs
src/green/strategy/: hold.rs  mod.rs
src/green/visualization/: candle.rs  mod.rs  plotting.rs
src/strategy/: buy_and_hold.toml  hold.rs  mod.rs  strategy.rs
src/visualization/: candle.rs  mod.rs  vis.rs
strategies/: demo.toml
strategy/: buy_and_hold.toml
tests/: broker_test.rs  config_test.rs  csv_test.rs  integration_test.rs  strategy_test.rs
