[package]
name = "golden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
toml = "0.8.12"
serde = { version = "1.0.200", features = ["derive"] }
serde_derive = "1.0.200"
csv = "1.3.0"

clickhouse = { version = "0.11.6", features = ["test-util"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.80"
dotenv = "0.15.0"
