[package]
name = "golden"
version = "0.1.2"
edition = "2021"
description = "All in one trading engine"
license = "GPL-3.0"
repository = "https://github.com/ryqdev/golden"
authors = ["ryqdev"]

[[bin]]
name = "golden"
path = "src/bin/golden.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
toml = "0.8.12"
serde = { version = "1.0.200", features = ["derive"] }
serde_derive = "1.0.200"
csv = "1.3.0"

tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.80"
time = "0.3.36"
egui = "0.27.2"
egui_plot = "0.27.2"
eframe = "0.27.2"
ibapi = "0.4.3"
colored = "2.1.0"
tungstenite = {version="0.21.0", features=["native-tls"]}
url = "2.5.0"
serde_json = "1.0.117"
dotenv = "0.15.0"
reqwest = "0.12.4"
